--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.24.2",
     "@emotion/react": "^11.14.0",
+    "firebase": "^12.1.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
