--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.24.2",
     "@emotion/react": "^11.14.0",
+    "@prisma/client": "^6.14.0",
     "firebase": "^12.1.0",
     "next": "15.4.6",
     "next-themes": "^0.4.6",
@@ -22,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prisma": "^6.14.0",
     "typescript": "^5"
   }
 }
